ssf/web/docroot/css/ss_mobile_iphone.css
/* ... */
span.pad-left20 select {
	color: #1C5894;
	}	

.font-red {
	color: red;
	}

/* colors 

#7abcba - light teal

*/

#login-pg, #home-pg, #myws-pg, #blog-pg { 
	position: relative; 
	font-family: Arial, Helvetica, sans-serif;
	}

#contentDetail { 
	padding: 0 20px; 
	}

.header { 
	color: white; 
	font-size: 16px;
	text-align: center;
	padding-top: 10px;
	background-color: #72AEB6;
	font-weight: bold; 
	width: 100%;
	background-image: -moz-linear-gradient(top, #81b2bd, #3e6978);
	background-image: -webkit-gradient(linear, left top, left bottom, from(#81b2bd), to(#3e6978));
	box-shadow: 1px 1px 35px #949494;
	-moz-box-shadow: 1px 1px 35px #949494;
	-webkit-box-shadow: 1px 1px 35px #949494;
	}
		
.search { 
	position: relative;
	top: -6px;
	right: 4px;
	font-size: .8em;
	font-weight: bold; 
	padding: 6px;
	background-color: #54919a;
	white-space:nowrap;
	-webkit-border-radius: 7px;
	}

.homelink { 
	position: relative;
	top: -6px;
	left: 4px;
	font-size: .8em;
	font-weight: bold; 
	padding: 6px;
	background-color: #54919a;
	white-space:nowrap;
	-webkit-border-radius: 7px;
	}

.backlink { 
	position: relative;
	top: -6px;
	left: 4px;
	padding: 3px 8px 0px 8px;
	vertical-align: middle;
	background-color: #4e8583;
	border: 1px solid #7abcba;
	white-space:nowrap;
	}
.lastupdated {
	font-size: .6em;
	}	
.action-dialog { 
	display: none;
	top: 38px; 
	left: 5px;
	right: 5px;
	padding: 10px;
	border-left: 1px solid #1C5894;
	border-right: 1px solid #1C5894;
	border-top: 2px solid #1C5894;
	border-bottom: 4px solid #1C5894;
	background: #e8e9e6 url(images/mobile/putty_blend3.png) repeat-x;
	background-position: bottom;
	}

.search	a, .homelink a { 
	color: #fff;
	}

#actions { 
	top: 0px; 
	left: 0px; 
	padding: 4px;
	background-color: #c3c5c0;
	background-image: url(images/mobile/level_one_pattern4.gif);
	background-repeat: repeat-x;
	background-position: top;
	border-bottom: 1px solid #1C5894;
	white-space: nowrap;
	vertical-align: middle;
	}
#actions a {
	font-size: 13px !important; 
	font-weight: bold; 
	padding: 4px;
	margin-right: 3px;
	}
		
.dialog-head { 
	font-size: .95em;
	font-weight: bold;
	text-transform: uppercase;
	margin-bottom: .5em;
	}
.dialog-content { 
	margin-bottom: .3em;
	}

.menu-spacer { 
	border-top: 2px solid #d2d5d1;
	margin-top: 5px;
	height: 5px;
	line-height:.5em;
	}
.menu-item {padding-left: .5em; margin-bottom: 10px}
.menu-item a { font-size: 1em;}
.menu-curlevel {font-weight: bold;}	

#micro-blog-a { 
	color: black;
	} 	
#micro-blog-date {
	padding-left: 20px;
	color: #949691;	
	}
#micro-blog-clear {
	margin-left: 2em; 
	}
#micro-blog-buttons {
	margin-top: .3em; 
	}
#micro-blog-text {
	width: 250px;h
	}
.entry-actions {
	text-align: right; 
	background-color: #eceeec;
	padding: 5px;
	padding-left: 10px;
    }
.entry-actions img{
	padding-right: 15px;
    }
.entry-action-buttons2 {
	padding-top: 5px;
	padding-left: 10px;
	}

#categoryTable {
	table-layout:fixed;
	width: 100%;
	}
#categoryTable td {
	text-align: center;
	padding: 4px;
	width: 30%;
	background-color: transparent;
	}
.category {
	position: absolute;
	top: 40px;
	width: 100%;
	height: 28px;
	text-align: center;
	background-color: #fff;
	}
.category-on {
	font-size: 16px;
	font-weight: bold;
	background-color: #fff;
	}	
.category-off {
	font-size: 14px;
	font-weight: bold;
	background-color: #b8b8b8;
	}
	
.content {
	width: 100%;
	}

.userid {
	background-color: #efeeec; /* #fef7c7; #f8f9cd;*/
	border-bottom: 1px solid #e2e5e1;
	}
.username {
	font-size: 20px;
	padding: 5px;
	padding-bottom: 0px;
	}
.phone, .email {
	font-size: 15px;
	color: #666;
	padding-top: 2px;
	padding-bottom: 2px;
	margin-left: 23%;
	}
.phone-2, .email-2 {
	font-size: 15px;
	color: #666;
	padding: 3px;
	margin-left: 30px;
	}
.userid-clear {
	clear: both;
	height: 0px;
	}
.userid img {
	position: relative;
	top: 0px;
	left: 0px;
	width: 20%;
	float: left;
	margin-right: 6px;
	}	

.ws-title {
	font-size: 1em;
	font-weight: bold;
	padding: 5px;
	background-color: #c3c5c0;
	background-image: url(images/mobile/level_one_pattern4.gif);
	background-repeat: repeat-x;
	border-bottom: 1px solid #1C5894;
	white-space:nowrap;
	}

.masthead-title {
	position:relative;
	top:-3px;
	font-size: 1.0em;
	}
.masthead-title2 {
	font-size: .6em;
	}

/*  my links styles */
.home-grid-row {
	clear: both;

}

.home-grid-cell {
	width: 33%;
	float: left;
	border-right: 1px solid #000;
}

.home-grid-cell .main-item {
	height:55px;
	padding: 25% 10px 35%;
	text-align:center;
}

.main-item {
	color: #f6f6f6;
	font-size: 12px;
	font-weight: bold;
   	text-shadow: 0 1px 0 #000000;
	background-color: #505354;
	border-bottom: 1px solid #000000;
}
.main-item img { 
	vertical-align: middle;
	margin-right: 5px;
	border:0px;
}

.main-item-label {
	margin-top: 5px;
	}

.my-item {
	font-weight: normal;
   	text-shadow: 0 1px 0 #000000;
	background-color: #fff;
	background:url(images/mobile/putty_blend4.png) repeat-x bottom;
	border-bottom: 1px solid #e2e5e1; /* #d2d5d1; */
}

.my-item img { 
	vertical-align: middle;
	margin-right: 5px;
	border:0px;
}

/*  folder styles */
.folders {
	position: relative;
	}
.folder-content {
	background-color: #fff;
	}
	
.folder-head {
	clear: both; 
	color: #fff;
	font-size: .95em;
	font-weight: bold;
	vertical-align: middle;
	padding: 5px 5px 5px 10px;
	letter-spacing: 1px;
	background-color: #71bfde;
	background: url(images/mobile/blue_slice40.png) repeat-x;
	background-position: center;
	}

.folder-item {
	font-size: 1.1em;
	background-color: #fff;
	padding: 6px 4px 6px 25px;
	border-bottom: 1px solid #d2d5d1;
	}
.folder-item-subtext {
	font-size: 10px;
	color:#999;
	}

/*  footer styles */
.footerbar				{ position: relative; left: 0px; bottom: 0px; height: 40px; background-color:#eceeec; width: 100%; margin: 10px 0 0 0; }
.footerbar #logo		{ position: relative; top: 8px; left: 8px; }
.footerbar .copyright	{ position: relative; top: -8px; left: 40px; width: 250px; color: #666; }
/* ... */

